Update Posts “wan-cost”

--- a/content/posts/wan-cost.mdx
+++ b/content/posts/wan-cost.mdx
@@ -1,8 +1,8 @@
 ---
 slug: wan-cost
-title: Why Career-Neutral Data centers are key to reduce WAN costs?
-date: 2021-08-10
+title: Why Carrier-Neutral Data centers are key to reduce WAN costs?
 image: /images/cover6.png
+date: 2021-08-10
 author: wutali
 tags:
   - document
