Update Posts “meet-me”

--- a/content/posts/meet-me.mdx
+++ b/content/posts/meet-me.mdx
@@ -1,8 +1,8 @@
 ---
 slug: meet-me
-title: Introducing OrionStellar Career-Neutral Meet-Me Rooms
-date: 2021-08-10
+title: Introducing OrionStellar Carrier-Neutral Meet-Me Rooms
 image: /images/cover5.png
+date: 2021-08-10
 author: wutali
 tags:
   - document
